Fixed spacing issues with banner image

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -97,6 +97,7 @@ position: absolute;
   position: absolute;
   left: 20px;
   top: 50px;
+  border: 2px solid #fff;
 }
 
 #open-menu:hover {
